--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@ui-kitten/components": "^5.3.1",
     "expo": "~50.0.6",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
@@ -28,6 +30,7 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
