--- a/app.json
+++ b/app.json
@@ -19,6 +19,7 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": ["ACCESS_BACKGROUND_LOCATION"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
