--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
       "supportsTablet": true
     },
     "android": {
-      "permissions": ["ACCESS_BACKGROUND_LOCATION"],
+      "permissions": [
+        "ACCESS_BACKGROUND_LOCATION"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -31,7 +33,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
