--- a/package.json
+++ b/package.json
@@ -7,22 +7,34 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "translate": "json-autotranslate -i locales -m i18next -s manual"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@expo/html-elements": "^0.9.1",
     "@expo/vector-icons": "^14.0.0",
+    "@formatjs/intl-displaynames": "^6.6.6",
+    "@formatjs/intl-locale": "^3.4.5",
+    "@formatjs/intl-pluralrules": "^5.2.12",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.20.5",
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
+    "expo-auth-session": "~5.4.0",
+    "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.2",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
+    "expo-localization": "~14.8.3",
     "expo-location": "~16.5.3",
+    "expo-random": "~13.6.0",
     "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
@@ -30,13 +42,17 @@
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "formik": "^2.4.5",
+    "i18next": "^23.9.0",
     "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.5",
     "react-native": "0.73.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.10.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
@@ -47,8 +63,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "babel-plugin-i18next-extract": "^0.10.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
+    "json-autotranslate": "^1.12.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
