--- a/package.json
+++ b/package.json
@@ -22,18 +22,21 @@
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-picker/picker": "2.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.0.2",
-    "@tanstack/react-query": "^5.20.5",
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-auth-session": "~5.4.0",
+    "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
+    "expo-device": "~5.9.3",
     "expo-font": "~11.10.2",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
     "expo-location": "~16.5.3",
+    "expo-notifications": "~0.27.6",
     "expo-random": "~13.6.0",
     "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
@@ -50,7 +53,6 @@
     "react-native": "0.73.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.10.0",
-    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.8.2",
