--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eva-design/eva": "^2.2.0",
     "@expo/html-elements": "^0.9.1",
     "@expo/vector-icons": "^14.0.0",
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@formatjs/intl-displaynames": "^6.6.6",
     "@formatjs/intl-locale": "^3.4.5",
     "@formatjs/intl-pluralrules": "^5.2.12",
@@ -26,7 +27,7 @@
     "@react-navigation/native": "^6.0.2",
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.6.7",
-    "expo": "~50.0.6",
+    "expo": "^50.0.11",
     "expo-auth-session": "~5.4.0",
     "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
@@ -35,7 +36,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
-    "expo-location": "~16.5.3",
+    "expo-location": "~16.5.5",
     "expo-notifications": "~0.27.6",
     "expo-random": "~13.6.0",
     "expo-router": "~3.4.7",
@@ -60,6 +61,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
+    "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -67,7 +69,7 @@
     "@types/react": "~18.2.45",
     "babel-plugin-i18next-extract": "^0.10.0",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.2",
+    "jest-expo": "~50.0.3",
     "json-autotranslate": "^1.12.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
